Dark mode css fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,46 +16,6 @@
     0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
     0 16px 32px rgba(var(--gray), 33%);
 }
-html.dark {
-  background-color: #181824;
-  color: #fff;
-}
-
-html.dark body {
-  background: #181824 !important;
-  color: #fff !important;
-}
-
-html.dark h1,
-html.dark h2,
-html.dark h3,
-html.dark h4,
-html.dark h5,
-html.dark h6 {
-  color: #fff !important;
-}
-
-html.dark a {
-  color: #a8b4ff;
-}
-
-html.dark code {
-  background-color: #23244a;
-  color: #fff;
-}
-
-html.dark hr {
-  border-top: 1px solid #23244a;
-}
-
-/* Remove gradient in dark mode */
-html.dark body {
-  background: #181824 !important;
-}
-
-.dark .nav-links a {
-  color: #fff;
-}
 @font-face {
   font-family: "Atkinson";
   src: url("/fonts/atkinson-regular.woff") format("woff");
@@ -192,4 +152,15 @@ hr {
   clip-path: inset(50%);
   /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
   white-space: nowrap;
+}
+
+html.dark {
+  filter: invert(1) hue-rotate(180deg);
+}
+
+/* Prevent images, videos, and SVGs from being inverted */
+html.dark img,
+html.dark video,
+html.dark svg {
+  filter: invert(1) hue-rotate(180deg);
 }
